--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -20,21 +20,31 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/logo"
+            android:includeFontPadding="false"
+            android:layout_marginBottom="-10dp"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="30sp"
+            android:textSize="70sp"
             android:textStyle="bold" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/colorPrimaryDark" />
 
-        <TextView
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_title_bold"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="23sp"
-            android:textStyle="bold" />
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/colorPrimaryDark" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_title_bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
 
         <TextView
@@ -42,7 +52,7 @@
             android:layout_height="wrap_content"
             android:text="@string/your_online_diary"
             android:textColor="@color/colorPrimary"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
     </LinearLayout>
 
 </RelativeLayout>
