--- a/app/src/main/res/drawable/circle_blue.xml
+++ b/app/src/main/res/drawable/circle_blue.xml
@@ -3,7 +3,7 @@
     android:shape="oval">
     <corners android:radius="100dp" />
     <gradient
-        android:startColor="#660000ff"
-        android:endColor="#0000ff"
+        android:startColor="#476EAF"
+        android:endColor="#9F49AC"
         android:angle="-270" />
 </shape>
