--- a/app/src/main/res/drawable/circular_corner_button.xml
+++ b/app/src/main/res/drawable/circular_corner_button.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/colorPrimaryDark" />
-            <stroke android:width="2dp" android:color="@color/colorPrimary" />
+            <stroke android:width="2dp" android:color="@color/colorPrimaryDark" />
             <!--corners allow us to make the rounded corners button--><!--
             <corners android:radius="15dp" />-->
         </shape>
