--- a/app/src/main/res/layout/today_fragment.xml
+++ b/app/src/main/res/layout/today_fragment.xml
@@ -1,40 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_gravity="center"
+    android:fillViewport="true">
 
-    <FrameLayout
-        android:id="@+id/frameLayout1"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <com.singular.barrister.Custom.RecyclerViewPager
-            android:id="@+id/viewpager"
+        <FrameLayout
+            android:id="@+id/frameLayout1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            app:rvp_singlePageFling="true"
-            app:rvp_triggerOffset="0.1" />
-    </FrameLayout>
+            android:layout_centerInParent="true">
 
-    <TextView
-        android:id="@+id/textViewErrorText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="There is no court added yet!"
-        android:textColor="@color/colorTextBlack"
-        android:visibility="gone" />
+            <com.singular.barrister.Custom.RecyclerViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                app:rvp_singlePageFling="true"
+                app:rvp_triggerOffset="0.1" />
+        </FrameLayout>
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textViewErrorText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="There is no court added yet!"
+            android:textColor="@color/colorTextBlack"
+            android:visibility="gone" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+    </RelativeLayout>
+</ScrollView>
