--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -44,8 +44,8 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
-
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>
+        <!--ads:adSize="FULL_BANNER"-->
         <ProgressBar
             android:id="@+id/progressBar4"
             style="?android:attr/progressBarStyle"
