--- a/app/src/main/res/menu/option.xml
+++ b/app/src/main/res/menu/option.xml
@@ -26,6 +26,5 @@
         android:id="@+id/menuSearch"
         android:icon="@mipmap/ic_search_icon"
         android:title="Search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always|collapseActionView"/>
+        app:showAsAction="ifRoom|collapseActionView"/>
 </menu>
