--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -27,7 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="32dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginRight="@dimen/fab_margin"
         app:srcCompat="@mipmap/ic_add_icon" />
 
 </android.support.design.widget.CoordinatorLayout>
