--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,7 @@
 
     <color name="colorTextBlack">#000000</color>
     <color name="colorTextBlackLight">#777777</color>
+
+    <color name="switch_selected_text_color">#FFFFFF</color>
+    <color name="switch_regular_text_color">#A8A8A8</color>
 </resources>
