--- a/app/src/main/res/layout/activity_add_case.xml
+++ b/app/src/main/res/layout/activity_add_case.xml
@@ -167,15 +167,19 @@
                     android:id="@+id/EditTextCaseNotesError"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:errorEnabled="true">
+                    app:errorEnabled="true"
+                    >
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/EditTextCaseNotes"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Case notes"
-                        android:inputType="textNoSuggestions|textCapWords|textCapSentences"
-                        android:maxLines="1" />
+                        android:minLines="3"
+                        android:maxLines="4"
+                        android:scrollbars="vertical"
+                        android:inputType="textMultiLine"
+                        android:gravity="top|left"/>
 
                 </android.support.design.widget.TextInputLayout>
 
