--- a/app/src/main/res/layout/activity_add_client.xml
+++ b/app/src/main/res/layout/activity_add_client.xml
@@ -21,58 +21,80 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/editTextFirstName"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/LayoutEditTextFirstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hint_first_name"
-                android:inputType="textNoSuggestions|textCapWords|textCapSentences"
-                android:maxLines="1"
-                android:singleLine="true" />
+                app:errorEnabled="true">
 
-            <EditText
-                android:id="@+id/editTextLastName"
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editTextFirstName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_first_name"
+                    android:inputType="textNoSuggestions|textCapWords|textCapSentences"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/LayoutEditTextLastName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hint_last_name"
-                android:inputType="textNoSuggestions|textCapWords|textCapSentences"
-                android:maxLines="1"
-                android:singleLine="true" />
+                app:errorEnabled="true">
 
-            <EditText
-                android:id="@+id/editTextPhoneNumber"
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editTextLastName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_last_name"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/LayoutEditTextNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Phone"
-                android:inputType="phone"
-                android:maxLines="1"
-                android:maxLength="10"
-                android:singleLine="true" />
+                app:errorEnabled="true">
 
-            <EditText
-                android:id="@+id/editTextEmailId"
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editTextNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Phone"
+                    android:inputType="number"
+                    android:maxLength="10"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/LayoutEditTextEMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hint_email_id"
-                android:inputType="textNoSuggestions|textCapWords|textCapSentences"
-                android:maxLines="1"
-                android:singleLine="true" />
+                app:errorEnabled="true">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editTextEMail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_email_id"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
 
 
-            <EditText
-                android:id="@+id/editTextPassword"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/LayoutEditTextPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hint_password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true" />
+                app:errorEnabled="true">
 
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editTextPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
 
