--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -177,8 +177,48 @@
                             android:layout_width="match_parent"
                             android:layout_height="0.2dp"
                             android:layout_marginTop="10dp"
-                            android:background="@color/colorTextBlackLight"
-                            android:visibility="gone" />
+                            android:background="@color/colorTextBlackLight" />
+                    </LinearLayout>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ripple">
+
+                <ImageView
+                    android:id="@+id/imageView1ss"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="@dimen/fab_margin"
+                    android:src="@mipmap/ic_web_icon" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_toEndOf="@+id/imageView1ss"
+                    android:layout_toRightOf="@+id/imageView1ss"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="36dp"
+                        android:layout_marginTop="@dimen/fab_margin"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="10dp"
+                        android:text="http://www.barristerdiary.com"
+                        android:textColor="@color/colorTextBlack"
+                        android:textSize="16sp" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.2dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/colorTextBlackLight"/>
+
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
