--- a/app/src/main/res/layout/activity_display_court.xml
+++ b/app/src/main/res/layout/activity_display_court.xml
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:text="State"
             android:textSize="16sp"
-            android:textColor="@color/colorTextBlackLight"
+            android:textColor="@color/colorTextBlack"
             android:layout_marginTop="10dp"/>
         <TextView
             android:id="@+id/textViewCourtState"
