--- a/app/src/main/res/layout/today_layout_new.xml
+++ b/app/src/main/res/layout/today_layout_new.xml
@@ -76,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="Mumbai high court"
-                    android:textColor="#77ffffff"
+                    android:textColor="#ffffff"
                     android:textSize="16sp" />
 
                 <TextView
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="Mumbai"
-                    android:textColor="#77ffffff"
+                    android:textColor="#ffffff"
                     android:textSize="16sp" />
             </LinearLayout>
 
