--- a/app/src/main/res/drawable/circular_white.xml
+++ b/app/src/main/res/drawable/circular_white.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/white" />
-            <stroke android:width="2dp" android:color="@android:color/white" />
+            <solid android:color="@color/colorPrimary" />
+            <stroke android:width="2dp" android:color="@color/colorPrimary" />
             <!--corners allow us to make the rounded corners button-->
             <corners android:radius="20dp" />
         </shape>
