--- a/app/src/main/res/layout/court_list_item.xml
+++ b/app/src/main/res/layout/court_list_item.xml
@@ -60,6 +60,17 @@
             android:textColor="@color/colorTextBlackLight"
             android:textSize="14sp" />
 
+        <TextView
+            android:id="@+id/textViewNotes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:fontFamily="sans-serif"
+            android:text="Jalna"
+            android:textColor="@color/colorTextBlackLight"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0.2dp"
