--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_forgot_password"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,24 +11,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.singular.barrister.Activity.ForgotPassword">
 
-    <EditText
-        android:id="@+id/editTextEmailId"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/LayoutEditTextEmailId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/fab_margin"
-        android:ems="10"
-        android:hint="@string/hint_email_id"
-        android:inputType="textPersonName"
-        android:maxLines="1"
-        android:singleLine="true" />
+        app:errorEnabled="true">
 
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/editTextEmailId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_email_id"
+            android:inputType="textNoSuggestions|textCapWords|textCapSentences"
+            android:maxLines="1" />
+
+    </android.support.design.widget.TextInputLayout>
     <Button
         android:id="@+id/buttonGetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editTextEmailId"
+        android:layout_below="@+id/LayoutEditTextEmailId"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/fab_margin"
         android:background="@drawable/circular_corner_button"
@@ -42,7 +45,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editTextEmailId"
+        android:layout_below="@id/LayoutEditTextEmailId"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/fab_margin"
         android:gravity="center"
