--- a/app/src/main/res/layout/activity_update__hearing.xml
+++ b/app/src/main/res/layout/activity_update__hearing.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/editTextCaseStatusError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true">
+                app:errorEnabled="false">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/editTextCaseStatus"
@@ -48,18 +48,23 @@
                     android:inputType="textNoSuggestions|textCapWords|textCapSentences" />
 
             </android.support.design.widget.TextInputLayout>
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/editTextCaseNotesError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true">
+                app:errorEnabled="false">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/editTextCaseNotes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="top|left"
                     android:hint="Case Notes"
-                    android:inputType="textNoSuggestions|textCapWords|textCapSentences" />
+                    android:inputType="textMultiLine"
+                    android:maxLines="4"
+                    android:minLines="3"
+                    android:scrollbars="vertical" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -67,16 +72,27 @@
                 android:id="@+id/editTextCaseDecisionError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true">
+                app:errorEnabled="false">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/editTextCaseDecision"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textNoSuggestions|textCapWords|textCapSentences"
-                    android:hint="Case Decision"/>
+                    android:gravity="top|left"
+                    android:hint="Case Decision"
+                    android:maxLines="4"
+                    android:minLines="3"
+                    android:scrollbars="vertical" />
 
             </android.support.design.widget.TextInputLayout>
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/fab_margin"
+                android:textColor="#777777"
+                android:visibility="gone"/>
         </LinearLayout>
 
         <ProgressBar
