--- a/app/src/main/res/layout/important_link.xml
+++ b/app/src/main/res/layout/important_link.xml
@@ -11,7 +11,7 @@
         android:id="@+id/editTextWebSiteNameError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:errorEnabled="true">
+        app:errorEnabled="false">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/editTextWebSiteName"
@@ -19,7 +19,8 @@
             android:layout_height="wrap_content"
             android:hint="Website name"
             android:inputType="textNoSuggestions"
-            android:maxLines="1" />
+            android:maxLines="1"
+            />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -27,7 +28,7 @@
         android:id="@+id/editTextWebSiteUrlError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:errorEnabled="true">
+        app:errorEnabled="false">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/editTextWebSiteUrl"
@@ -37,4 +38,11 @@
             android:hint="Website url" />
 
     </android.support.design.widget.TextInputLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:layout_marginTop="@dimen/fab_margin"
+        android:text="Hint : Please copy paste the url from web browser, Always try to enter full url with http or https for example : http://gujarathighcourt.nic.in"/>
 </LinearLayout>
