--- a/app/src/main/res/layout/activity_add_case.xml
+++ b/app/src/main/res/layout/activity_add_case.xml
@@ -184,7 +184,7 @@
                 </android.support.design.widget.TextInputLayout>
 
 
-                <TextView
+                <!--<TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
@@ -199,7 +199,24 @@
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Select Client"
                     android:textColor="@color/colorTextBlackLight"
-                    android:textSize="16sp" />
+                    android:textSize="16sp" />-->
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/EditTextSelectClientError"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:errorEnabled="true">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/EditTextSelectClient"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:hint="Select client"
+                        android:inputType="textNoSuggestions|textCapWords|textCapSentences"
+                        android:maxLines="1" />
+
+                </android.support.design.widget.TextInputLayout>
 
                 <RadioGroup
                     android:layout_width="match_parent"
